@@ -51,6 +51,9 @@ Working version
 - #11022: Track GC work for all managed bigarray allocations
   (Stephen Dolan, report by Andrew Hunter, review by Damien Doligez)
 
+- #10802: Use 4.12 value macros and helpers in C code
+  (Antonin Décimo, review by Gabriel Scherer)
+
 ### Code generation and optimizations:
 
 - #10972: ARM64 multicore support: OCaml & C stack separation;
